src/test/error/class6.lns
{
   let test2 = new int;
}
